2006-05-21  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/extension/internal/pdf.cpp: Compilation fix.  For versions
	  of glib older that 2.9.0, use g_date_set_time() instead of
	  g_date_set_time_t().

2006-05-20  MenTaLguY  <mental@rydia.net>

	* src/extensin/internal/ps.cpp:

	  add %%EOF trailer for DSC-compliance

2006-05-20  Colin Marquardt  <colin@marquardt-home.de>

	* share/extensions/lindenmayer.inx,
	  share/extensions/kochify_load.inx, 
	  share/extensions/kochify.inx:
	  Rename slightly, also makes for easier translation.

2006-05-20  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/icon.h, src/widgets/icon.cpp, src/dialogs/layers-panel.cpp:
	  Changled dialog from checkboxes to icons for visible and locked.

2006-05-20  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/libnrtype/FontInstance.cpp: patch from David Turner of the
	  FreeType Project.  Fixes a compilation problem and a possible
	  segmentation fault.

2006-05-19  Jon A. Cruz  <jon@joncruz.org>
	* src/preferences-skeleton.h, src/dialogs/layers-panel.h,
	  src/dialogs/layers-panel.cpp:
	  Selection and event handling cleanup. Added deeper display.

2006-05-18  Jon A. Cruz  <jon@joncruz.org>
	* src/layer-manager.cpp, src/dialogs/layers-panel.h,
	  src/dialogs/layers-panel.cpp:
	  Next round of layer dialog updates.

2006-05-17  Kees Cook  <kees@outflux.net>
	* src/dialogs/rdf.cpp: corrected localization on array, added comments.
	* src/ui/widget/licensor.cpp: Localized the license name.
	* configure.ac: added comment about why sigc++ was upgraded

2006-05-17  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/layers-panel.cpp:
	  Flipped top/bottom in layers UI to reflect visible stacking.

2006-05-16  verbalshadow  <verbalshadow@gmail.com>

	* src/desktop-style.h, src/desktop-style.cpp:
	  Fixes calligraphy tool so drawing now uses the the correct opacity.

2006-05-17  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h: