@@ -1,3 +1,9 @@
+2006-05-21  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/layer-manager.cpp, src/layer-manager.h,
+	  src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h:
+	  Adding notification when managed layers change.
+
 2006-05-21  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* src/extension/internal/pdf.cpp: Compilation fix.  For versions
